# rs-clob-client-v2

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  conventional-title.yml  release-plz.yml
docs/: integration-guide.md
docs/plans/: 0001-rs-clob-client-v2-architecture.md  0002-polish-and-qa.md  0003-audit-fixes.md  0004-parity-completion.md  0005-audit-prompt.md  0006-independent-audit-findings.md  0007-independent-reaudit-prompt.md  0008-release-signoff-audit-prompt.md  0009-post-0008-targeted-audit.md  0010-final-codex-polish-audit.md
examples/: basic.rs  market_data.rs  orders.rs
src/: auth.rs  config.rs  error.rs  lib.rs  serde_helpers.rs  types.rs
src/clob/: client.rs  mod.rs  order_builder.rs
src/clob/types/: book.rs  builder.rs  enums.rs  market.rs  mod.rs  order.rs  request.rs  response.rs  trade.rs
src/clob/ws/: mod.rs  orderbook.rs  user.rs
src/ws/: config.rs  connection.rs  mod.rs  traits.rs
tests/: auth.rs  client.rs  fees.rs  foundation.rs  get_signer.rs  market_price.rs  order.rs  order_amounts.rs  serde.rs  signing.rs
tests/common/: mod.rs
