[package]
name = "polymarket-clob-client-v2"
description = "Rust client for Polymarket's CLOB V2 API"
version = "0.1.0"
authors = ["Hongjun Wu <hongjunwu@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/polymarket/rs-clob-client-v2"
keywords = ["polymarket", "clob", "prediction-market", "orderbook", "trading"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["clob"]
clob = []
ws = ["dep:tokio-tungstenite"]

[dependencies]
alloy = { version = "1.6.3", default-features = false, features = [
    "dyn-abi",
    "serde",
    "signer-local",
    "signers",
    "sol-types"
] }
async-trait = "0.1.89"
base64 = "0.22.1"
bon = "3.9.1"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.31"
hmac = "0.12.1"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.4.0"
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_with = { version = "3.18.0", features = ["chrono_0_4", "json"] }
sha2 = "0.10.9"
sha1 = "0.10.6"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"], optional = true }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["serde", "v4", "v7"] }

[dev-dependencies]
httpmock = "0.8.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "warn"
missing_errors_doc = "allow"
