[package]
name = "polymarket-client-sdk"
description = "Bullpen.fi best-guess Rust implementation of Polymarket's CLOB V2 SDK"
version = "0.1.0"
authors = ["Hongjun Wu <hongjunwu@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/BullpenFi/rs-clob-client-v2"
keywords = ["polymarket", "clob", "prediction-market", "orderbook", "trading"]
categories = ["api-bindings", "finance", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["clob"]
clob = []
tracing = ["dep:tracing", "dep:serde_ignored", "dep:serde_path_to_error"]
ws = ["dep:tokio-tungstenite"]

[dependencies]
alloy = { version = "1.6.3", default-features = false, features = [
    "dyn-abi",
    "serde",
    "signer-local",
    "signers",
    "sol-types"
] }
async-trait = "0.1.89"
base64 = "0.22.1"
bon = "3.9.1"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.31"
hmac = "0.12.1"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["gzip", "json", "query", "rustls"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
rust_decimal_macros = "1.40.0"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.4.0"
serde_ignored = { version = "0.1", optional = true }
serde_json = "1.0.149"
serde_path_to_error = { version = "0.1", optional = true }
serde_repr = "0.1.20"
serde_with = { version = "3.18.0", features = ["chrono_0_4", "json"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"], optional = true }
tracing = { version = "0.1", optional = true }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["serde", "v4", "v7"] }

[dev-dependencies]
httpmock = "0.8.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Keep these relaxed in this crate because `bon` and `sol!` emit internal
# `#[allow]` attributes that become hard failures under `-D warnings`.
# The remainder of the lint block tracks the V1 baseline.
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
doc_include_without_cfg = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
large_include_file = "warn"
let_underscore_untyped = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_errors_doc = "allow"
module_name_repetitions = "warn"
multiple_crate_versions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
pathbuf_init_then_push = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
similar_names = "allow"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
todo = "warn"
too_many_lines = "allow"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
